2004-04-23  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/RTFDoc.py: Completely switch from grampslib.
	* src/docgen/PdfDoc.py: Typo.
	* src/docgen/HtmlDoc.py: Typo.

2004-04-21  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SelectChild.py (on_save_child_clicked): Corrections.

2004-04-20  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ChooseParents.py: Disallow selecting self as a parent.

2004-04-20  Jason Salaz  <whatsizbucket@comcast.net>
	* src/SelectChild.py: Disallow selecting self as a child.

2004-04-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: support for new GTK 2.4 file chooser

2004-04-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Bookmarks.py: use IDs instead of person references
	* src/ChooseParents.py: allow for NOSORT option
	* src/GrampsParser.py: removed
	* src/GrampsXML.py: removed
	* src/MediaView.py: allow for NOSORT option
	* src/PedView.py: double click to edit
	* src/PeopleView.py: allow for NOSORT option
	* src/PlaceView.py: allow for NOSORT option
	* src/RelLib.py: handle bookmarks in metadata
	* src/ReadXML.py: merge GrampsParser
	* src/SourceView.py: allow for NOSORT option
	* src/const.py.in: fix paths for xml files
	* src/gramps_main.py: bookmark fixes
	* src/papersize.xml : move to data subdirectory
	* src/plugins/ReadGedcom.py: fix menu string
	* src/plugins/ReadNative.py: fix menu string
	* src/plugins/ReadPkg.py: fix menu string

2004-04-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/choose.glade: merged into gramps.glade
	* src/styles.glade: merged into gramps.glade
	* src/dialog.glade: merged into gramps.glade
	* src/styles.glade: merged into gramps.glade
	* src/imagesel.glade: merged into gramps.glade
	* src/errdialogs.glade: merged into gramps.glade
	* src/gramps.glade: merged from other files
	* src/RelLib.py: add_source takes an transaction
	* src/ReadGedcom.py: drop add_surname

2004-04-06  Don Allingham  <dallingham@users.sourceforge.net>