@@ -645,3 +645,93 @@ def unbold_label(label):
     text = string.replace(text,'</b>','')
     label.set_text(text)
     label.set_use_markup(0)
+
+#------------------------------------------------------------------------
+#
+# XPM Image for reports and tools 
+#
+#------------------------------------------------------------------------
+def get_xpm_image():
+    return [
+        "48 48 33 1",
+        " 	c None",
+        ".	c #1A1A1A",
+        "+	c #847B6E",
+        "@	c #B7AC9C",
+        "#	c #D1D1D0",
+        "$	c #EEE2D0",
+        "%	c #6A655C",
+        "&	c #868686",
+        "*	c #F1EADF",
+        "=	c #5C5854",
+        "-	c #B89C73",
+        ";	c #E2C8A1",
+        ">	c #55524C",
+        ",	c #F5EEE6",
+        "'	c #4F4E4C",
+        ")	c #A19C95",
+        "!	c #B3966E",
+        "~	c #CDC8BF",
+        "{	c #F6F2ED",
+        "]	c #A6A5A4",
+        "^	c #413F3F",
+        "/	c #D8D1C5",
+        "(	c #968977",
+        "_	c #BAB9B6",
+        ":	c #FAFAF9",
+        "<	c #BEA27B",
+        "[	c #E9DAC2",
+        "}	c #9D9385",
+        "|	c #E4E3E3",
+        "1	c #7A7062",
+        "2	c #E6D3B4",
+        "3	c #BAA488",
+        "4	c #322E2B",
+        "                                                ",
+        "                                                ",
+        "             (+(+++++111%1%%%%===%1             ",
+        "             +______________@_@)&==1            ",
+        "             +_::::::::::::::*|#_&&}>           ",
+        "             &_:::::::::::::::{|#]1~}^          ",
+        "             +_::::::::::::::::{|#=|~&4         ",
+        "             +_::::]]]]]]]]:::::|{':|~&4        ",
+        "             +_::::::::::::::::::{'::|~&4       ",
+        "             +_:::::::::::::::::::'*::|~&^      ",
+        "             +_:::::::::::::::::::'|*::|~}>     ",
+        "             1_::::]]]]]]]]]]]]:::'~|{::|_}%    ",
+        "             1_:::::::::::::::::::'..4^'=1+%1   ",
+        "             +_::::]]]]]]]]]]]]:::|__])&+%=^%   ",
+        "             1_::::::::::::::::::::|#__)&&+'^   ",
+        "             1_::::]]]]]]]]]::::::::|#~_])&%^   ",
+        "             1_::::::::::::::::::::{||#~_])14   ",
+        "             1_::::]]]]]]]]]]]]]]]]]]&}#~_]+4   ",
+        "             1_::::::::::::::::::{{{{||#~~@&4   ",
+        "             %_::::]]]]]]]]]]]]]]]])))}(~~~&4   ",
+        "             %_:::::::::::::::::{{{{{*|#/~_(4   ",
+        "             %_::::]]]]]]]]]]]]]]])))))}2;/}4   ",
+        "             %_:::::::::::::::{{{{{***||[#~}4   ",
+        "             %_::::]]]]]]]]]])]))))))))}2/;)4   ",
+        "             %_::::::::::::::{{{{{**|$$[/2~!4   ",
+        "             %_::::]]]]]]]]){{{{******$$[2/}4   ",
+        "             %_::::::::::::{{{{****$$$$$[2/!4   ",
+        "             =_::::]]]]]]])]))))))))})}}[2/!4   ",
+        "             %_:::::::::{{{{{{**|$$$$$$[[2;)4   ",
+        "             =_::::]]]])]]))))))))))}}}}[22!4   ",
+        "             %_::::::::{{{{{|**|$$[$[[[[[22}4   ",
+        "             =_::::]]])])))))))))}}}}}}}222-4   ",
+        "             =_:::::{{{{{|{*|$$$$$[[[[22222!4   ",
+        "             =_::::)]])))))))))}}}}}}(}(2;2-4   ",
+        "             =_:::{{{{{{***|$$$$$[[[[22222;-4   ",
+        "             =_:::{])))))))))}}}}}}}(}((2;;<4   ",
+        "             >_:{{{{{{**|$$$$$[[[[22222;2;;-4   ",
+        "             >_{{{{)))))))}}}}}}}(!(((((;;;-4   ",
+        "             >_{{{{|**|*$$$$$[[[[22222;;;;;!4   ",
+        "             '_{{{{****$$$$$2[[222222;2;;;;-4   ",
+        "             '@{{****$$$$$[[[2[222;;2;;;;;;!4   ",
+        "             >]{******$$$[$[2[[2222;;;;;;;;!4   ",
+        "             '_****$$$$[$[[[[2222;2;;;;;;;;!4   ",
+        "             '@__@@@@@@@33<3<<<<<<-<-!!!!!!!4   ",
+        "             44444444444444444444444444444444   ",
+        "                                                ",
+        "                                                ",
+        "                                                "]
